# clint

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  cli_structure.schema.json  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli_explorer_toolkit.rs  cli_navigator_toolkit.rs  cli_parser.rs  comparison.rs  keyword_extractor.rs  main.rs  models.rs  naive_tooltip_content_generator.rs  replicator.rs  summary_generator.rs  typescript_writer.rs  usage_parser.rs
src/schemas/cobra/: cobra_cli_structure.schema.json  cobra_cli_structure.zod.ts  command-components.ts  naming-convention.ts
src/web/: cli-command-card.js  cli-structure.json  index.html  script.js
