[package]
name = "clint"
description = "CLI Navigator Toolkit (CLINT) meant for people doing 'Developer Experience' work. It helps you understand the structure of CLI tools and quickly prototype proposals to the rest of your team."
authors = ["Diego Coy (https://github.com/funnierinspanish)"]
repository = "https://github.com/funnierinspanish/clint"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive", "cargo"] }
clap_builder = "4.5.34"
regex = "1.11.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
