[package]
name = "clint"
description = "CLI Navigator Toolkit (CLINT) meant for people doing 'Developer Experience' work. It helps you get a better understanding of the structure of CLI tools to improve their usability."
authors = ["Diego Coy (https://github.com/funnierinspanish)"]
repository = "https://github.com/funnierinspanish/clint"
license = "MIT"
readme = "README.md"
keywords = ["cli", "developer-experience", "tools", "analysis", "visualization"]
categories = ["command-line-utilities", "development-tools", "visualization"]
version = "0.5.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.34", features = ["derive", "cargo"] }
clap_builder = "4.5.34"
regex = "1.11.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
dialoguer = "0.11"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
rand = "0.8"
atty = "0.2.14"
